[metadata]
name = pimht
version = 0.4.4
url = https://github.com/pilate/pimht
description = Parser for mhtml files
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License

[options]
packages = find:
install_requires = chardet

[options.extras_require]
speedups = 
    faust-cchardet
    pybase64
